[project]
name = "pmp-bicorporativo-etl"
version = "0.1.0"
description = ""
authors = [
    { name = "lcespedesn", email = "lcespedes@css.pe" }
]
readme = "README.md"
requires-python = "^3.11"  # Use caret to allow compatible versions

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
psycopg2 = "^2.9.10"
